--- a/_config.yml
+++ b/_config.yml
@@ -6,18 +6,29 @@ permalink: pretty
 title: Class boilerplate
 tagline: A Jekyll template for LMS
 authors:
-  - name: Luca De Feo
-    url: 'http://defeo.lu'
-created: 2014
+  - name: Baptiste Pesquet
+    url: 'http://bpesquet.fr'
+created: 
 license:
-  name: MIT license
-  shortname: MIT license
-  url: /LICENSE
+  name: Creative Commons BY-NC-SA 4.0
+  shortname: CC BY-NC-SA 4.0
+  url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+  badge: http://i.creativecommons.org/l/by-nc-sa/4.0/80x15.png
   
 # Collections
 collections:
   addons:
     output: true
+
+# Default values
+defaults:
+  - scope:
+      path: ''
+    values:
+      addons:
+        highlightjs: yes
+        print-link: yes
+        about: yes
 
 kramdown:
   parse_block_html: true
